--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
         updateUI();
 
         // --- LOGIN SYSTEM ---
-        const USER = "twgone";
+        const USER = "Twgone";
         const PASS = "123456";
 
         function login() {
