--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
         updateUI();
 
         // --- LOGIN SYSTEM ---
-        const USER = "twgone";
+        const USER = "Twgone";
         const PASS = "123";
 
         function login() {
